Menatap langit biru yang terus pudar

--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'TTInterphases';
+    src: url('TTInterphasesProTrialMedium.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 *{
     padding: 0px;
     margin: 0px;
