--- a/style.css
+++ b/style.css
@@ -191,10 +191,9 @@ div.edu h5{
     text-align: left;
 }
 
-div.op {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
+.D p {
+    padding-bottom: 20px;
+    padding-left: 5px;
 }
 
 .D div.ojek {
@@ -204,10 +203,13 @@ div.op {
     margin-right: auto;
     border-left: 5px solid #464a4e;
     border-radius: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
+
 .D img {
-    width: 80px;
+    margin: 20px;
+    width: 300px;
+
 }
 
 footer {
@@ -359,11 +361,14 @@ div.content p {
         margin-left: auto;
         margin-right: auto;
     }
-    header, .A .a {
+    header, .A .a, .D{
         padding-left: 5%;
         padding-right: 5%;
     }
-    
+    .D img {
+        width: 80%;
+    }
+
     
 }
 @media (max-width: 404px) {
